--- a/project.html
+++ b/project.html
@@ -115,7 +115,7 @@
 									<div class="item">
 										<img src="assets/images/Assignments/a3.png"  alt="Assignments image"/>
 										<div class="isotope-overlay">
-											<a href="/assets/Assignments/assignment-3/recipe.html" target="_blank">
+											<a href="https://miztania.github.io/portfolio1037/assets/Assignments/assignment-3/recipe.html" target="_blank">
 												Assignments 3 
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -123,7 +123,7 @@
 									<div class="item">
 										<img src="assets/images/Assignments/a4.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="/assets/Assignments/assignment4/recipe.html  " target="_blank">
+											<a href="https://miztania.github.io/portfolio1037/assets/Assignments/assignment4/recipe.html" target="_blank">
 												Assignments 4 
 											</a>
 										</div><!-- /.isotope-overlay -->
