--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 								</h3>
 								<h3>	Skills : Unreal, Unity, C#, Maya, Photoshop, Art 2D/3D</h3>
 								<h3>	Interests : Game Development, Art, Design, Technology</h3>
+								<h3>	artist at instagram page : miztyart</h3>
 								<p>
 									A creative and dedicated Game Director, Game Designer/Developer, and 2D/3D Artist with
 									experience in creating innovative games, leading teams, and producing culturally rich projects.
@@ -162,8 +163,8 @@
 								<div class="about-list-icon">
 									<ul>
 										<li>
-											<a href="https://www.facebook.com/profile.php?id=100013391353789">
-												<i  class="fa fa-facebook" aria-hidden="true"></i>
+											<a href="https://www.instagram.com/mizty.phum/">
+												<i  class="fa fa-instagram aria-hidden="true"></i>
 											</a>
 										</li>
 										<li>
